# elwynnbot

./: Cargo.toml  README.md  rust-toolchain.toml
src/: index.html  lib.rs  main.rs
src/Bootstapper/: main.rs  mod.rs
src/game/: enums.rs  functions.rs  memory_manager.rs  mod.rs  object_manager.rs
src/gui/: gui.rs  mod.rs
src/memory/: byte_to_string.rs  get_pid.rs  get_process_id_by_name.rs  mod.rs  read_process_memory.rs
src/warcraft/: mod.rs  object_manager.rs  objects.rs
