[package]
name = "elwynnbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "main"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "elwynnbot"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.2"
ctor = "0.2.0"
dll-syringe = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
detour = { version = "0.8.1", default-features = false }
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
iced_native = "0.10.1"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation"
]

