[package]
name = "elwynnbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "main"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "elwynnbot"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.2"
ctor = "0.2.0"
dll-syringe = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
detour = { version = "0.8.1", default-features = false }

